# TRAE--AI-NFO-to-VSMETA

./: .dockerignore  .gitignore  CHANGELOG.md  COMPREHENSIVE_ERROR_REPORT.md  DEPLOYMENT.md  DOCKER.md  DOCKER_RELEASE_GUIDE.md  FINAL.md  GITHUB_RELEASE_GUIDE.md  LICENSE  MANIFEST.in  PROJECT_COMPLETE.md  PROJECT_FINISHED.md  PROJECT_STATUS.md  PROJECT_SUMMARY_COMPLETE.md  QUICKSTART_DOCKER.md  README.md  build_docker.sh  check_package.py  check_pypi_setup.py  chinese_converter.py  conversion_checkpoint.json  conversion_checkpoint.pkl  create_github_release.py  docker-compose.yml  gui_app_optimized.py  install_build_tools.py  nfo_to_vsmeta_converter_complete.py  project_overview.py  publish_docker.sh  pyproject.toml  quickstart.py  release.py  requirements.txt  setup.py  single_file_converter_optimized_fixed.py  start_server.py  test_plugins.py  video_processor.py  web_ui.py  (+1 more)
.github/workflows/: ci.yml
.uploads/: d8ad28b4-5f2d-4838-a967-30bdf44a2a94_single_file_converter_optimized.py
backup/reports/: BUGFIX_FINAL_REPORT.md  BUGFIX_REPORT.md  CODE_AUDIT_REPORT.md  DEVELOPMENT.md  OPTIMIZATION_REPORT.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  PYPI_RELEASE_GUIDE.md  PYPI_SETUP.md  RELEASE_GUIDE.md  SECURITY_AUDIT_REPORT.json
config/: .gitkeep  README.md  __init__.py  config.example.json  exceptions.py  manager.py  schemas.py
docker/: DOCKER.md  DOCKER_BUILD.md  Dockerfile
docs/: plugin-system-optimization-design.md  plugin-system-optimization-plan.md
gui/: gui_app.py  gui_app_optimized_v2.py
plugins/: file_size_filter.py  metadata_enhancer_demo.py  metadata_logger.py  plugin_circuit_breaker.py  plugin_config_validator.py  plugin_event_bus.py  plugin_marketplace.py  plugin_metrics.py  plugin_sandbox.py
plugins/demo_metadata_enhancer/: README.md  __init__.py  plugin.py
scripts/: README.md  bump_version.py  release.sh
server/: README.md  __init__.py  main.py
server/api/: __init__.py
server/api/v1/: __init__.py  config.py  converter.py  router.py  system.py
server/core/: __init__.py  config.py  errors.py  middleware.py  retry.py
server/websocket/: __init__.py  handlers.py  manager.py
tests/: README.md  __init__.py  conftest.py  test_chinese_converter.py  test_config.py  test_config_manager.py  test_gui_app.py  test_integration.py  test_plugin_optimizations.py  test_plugin_system.py  test_plugin_system_extended.py  test_theme_manager.py  test_ui_widgets.py  test_video_processor.py
tools/: check_pypi_setup.py  project_overview.py  quickstart.py  release.py
ui/: __init__.py
ui/utils/: __init__.py  theme_manager.py
ui/widgets/: __init__.py  enhanced_file_list.py  enhanced_log_widget.py
