[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nfo-to-vsmeta"
version = "2.0.1"
description = "将 Kodi/XBMC 格式的 NFO 元数据文件转换为群晖 Video Station 的 VSMETA 格式"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Assistant", email = "assistant@example.com"}
]
maintainers = [
    {name = "NFO to VSMETA Team", email = "support@example.com"}
]
keywords = ["nfo", "vsmeta", "kodi", "synology", "video-station", "metadata", "converter", "xbmc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Archiving",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: Web Environment",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
# 完整功能
all = [
    "Pillow>=9.0.0",
    "tqdm>=4.60.0",
    "colorama>=0.4.4",
    "readchar>=2.0.0",
    "watchdog>=3.0.0",
    "Flask>=2.0.0",
]
# 图片处理
image = ["Pillow>=9.0.0"]
# 进度条
progress = ["tqdm>=4.60.0"]
# 彩色输出
color = ["colorama>=0.4.4"]
# 交互菜单
interactive = ["readchar>=2.0.0"]
# 热重载
hotreload = ["watchdog>=3.0.0"]
# Web UI
web = ["Flask>=2.0.0"]
# 开发工具
dev = [
    "black>=22.0.0",
    "mypy>=0.950",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=4.0.0",
]
# 测试工具
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=4.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "isort>=5.10.0",
]

[project.urls]
Homepage = "https://github.com/1525745393/TRAE--AI-NFO-to-VSMETA"
Documentation = "https://github.com/1525745393/TRAE--AI-NFO-to-VSMETA#readme"
Repository = "https://github.com/1525745393/TRAE--AI-NFO-to-VSMETA.git"
Issues = "https://github.com/1525745393/TRAE--AI-NFO-to-VSMETA/issues"
Changelog = "https://github.com/1525745393/TRAE--AI-NFO-to-VSMETA/blob/main/CHANGELOG.md"

[project.scripts]
nfo-to-vsmeta = "nfo_to_vsmeta_converter_complete:main"
nfo-vsmeta-web = "web_ui:main"

[tool.setuptools]
py-modules = ["nfo_to_vsmeta_converter_complete", "web_ui", "single_file_converter_optimized_fixed"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
nfo_to_vsmeta_converter_complete = [
    "plugins/*.py",
    "plugins/configs/*.json",
    "plugins/**/*.py",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "docs/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["nfo_to_vsmeta_converter_complete"]
omit = ["*/tests/*", "*/test_*.py", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]
max-line-length = 100
